tests/errors/parser-test-comment.spcasmtest
org 0
nop ;= ajsdkfl
